Fixed X-axis Overflow Styling -1.00

--- a/Dad's Art Catalog/force-app/main/default/lwc/selectedArt/selectedArt.css
+++ b/Dad's Art Catalog/force-app/main/default/lwc/selectedArt/selectedArt.css
@@ -1,3 +1,7 @@
+:host {
+    max-width: 100%;
+}
+
 .card-container {
     margin: 10px 0px;
     max-width: 95vw;
