--- a/Dad's Art Catalog/force-app/main/default/lwc/webContainer/webContainer.css
+++ b/Dad's Art Catalog/force-app/main/default/lwc/webContainer/webContainer.css
@@ -1,12 +1,16 @@
 :host {
     display: block;
-    width: 100vw;
+    /* width: 100vw; Weirdly when I got rid of this it stopped the weird dynamic overflow so leave it alone*/
     max-width: 100vw;
     min-height: 100vh;
     margin: 0;
     padding: 10px;
     background-color: black;
     color: floralwhite
+}
+
+:host > * {
+    max-width:100%;
 }
 
 .card-container {
